Use almost white frame on page rather than pdftk to prevent Kindle margin collapse

--- a/david-copperfield/prince-common.css
+++ b/david-copperfield/prince-common.css
@@ -1,3 +1,8 @@
+@page {
+    border: 1px solid #fefefe;
+    box-sizing:border-box;
+}
+
 body, td {
     color: black;
     background: white;
